tests/dev_and_build/errors/js_import_not_found/manual_test_static_file_server.mjs
import { startFileServer } from "@jsenv/core/tests/start_file_server.js";

await startFileServer({
  rootDirectoryUrl: import.meta.resolve("./client/"),
  debug: true,
});
